<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/registrationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/form_margin"
        android:layout_marginStart="@dimen/form_margin"
        android:layout_marginTop="@dimen/form_margin_top"
        android:visibility="visible">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/matrikelFieldLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_element_margin">

            <EditText
                android:id="@+id/matrikelField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:hint="@string/registration_matrikel_hint"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameFieldLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/matrikelFieldLayout">

            <EditText
                android:id="@+id/nameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:hint="@string/registration_name_hint"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailFieldLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameFieldLayout">

            <EditText
                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordFieldLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailFieldLayout">

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordRepFieldLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordFieldLayout">

            <EditText
                android:id="@+id/passwordRepField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:hint="@string/registration_password_confirm_hint"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/registrationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/passwordRepFieldLayout"
            android:layout_below="@id/passwordRepFieldLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/form_element_margin"
            android:background="@color/colorSecondary"
            android:paddingEnd="@dimen/button_padding_horizontal"
            android:paddingStart="@dimen/button_padding_horizontal"
            android:text="@string/registration_button" />
    </RelativeLayout>

    <include
        android:id="@+id/loadingView"
        layout="@layout/fragment_loading"
        android:visibility="gone" />
</RelativeLayout>
