<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <FrameLayout
        android:id="@+id/serverView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/serverRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/noServer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_server"
            android:visibility="visible"/>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/addButton"
            android:layout_width="@dimen/fab_size"
            android:layout_height="@dimen/fab_size"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:src="@drawable/ic_add_white_24dp"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:layout_gravity="end|bottom"/>
    </FrameLayout>
    <include
        android:id="@+id/loadingView"
        layout="@layout/fragment_loading"
        android:visibility="gone"/>
</LinearLayout>
