<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.schef.gadgeothek.LoginFragment">

    <RelativeLayout
        android:id="@+id/loginView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/form_margin_top"
        android:layout_marginEnd="@dimen/form_margin"
        android:layout_marginStart="@dimen/form_margin"
        android:visibility="visible">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailEditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_element_margin">

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordEditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailEditTextLayout">

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_element_margin"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/passwordEditTextLayout"
            android:layout_below="@id/passwordEditTextLayout"
            android:layout_marginTop="@dimen/form_element_margin"
            android:background="@color/colorSecondary"
            android:paddingEnd="@dimen/button_padding_horizontal"
            android:paddingStart="@dimen/button_padding_horizontal"
            android:text="@string/login_button" />

        <Button
            android:id="@+id/registerButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordEditTextLayout"
            android:layout_marginEnd="@dimen/button_space_between"
            android:layout_marginTop="@dimen/form_element_margin"
            android:layout_toStartOf="@id/loginButton"
            android:background="?android:attr/selectableItemBackground"
            android:paddingEnd="@dimen/button_padding_horizontal"
            android:paddingStart="@dimen/button_padding_horizontal"
            android:text="@string/login_register"
            android:textColor="@color/colorSecondaryDark" />
    </RelativeLayout>

    <include
        android:id="@+id/loadingView"
        layout="@layout/fragment_loading"
        android:visibility="gone" />
</FrameLayout>
