<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gadgetView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/gadgetlistRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <TextView
        android:id="@+id/noGadgets"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_gadget"
        android:gravity="center"
        android:visibility="gone" />

    <include
        android:id="@+id/errorView"
        layout="@layout/error_view"
        android:visibility="gone" />

    <include
        android:id="@+id/loadingView"
        layout="@layout/fragment_loading"
        android:visibility="gone" />
</RelativeLayout>


